objects/ssot__JobPositionRecruitmentRequisition__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Job Position Recruitment Requisition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__JobPositionId__c</fullName>
        <label>Job Position</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentRequisitionId__c</fullName>
        <label>Recruitment Requisition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721371621552_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JobPositionRecruitmentRequisition_Re_rel</label>
        <referenceTo>ssot__RecruitmentRequisition__dlm</referenceTo>
        <relationshipLabel>JobPositionRecruitmentRequisition_Re_rel</relationshipLabel>
        <relationshipName>rel_1721371621552_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721371846236_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JobPositionRecruitmentRequisition_Jo_rel</label>
        <referenceTo>ssot__JobPosition__dlm</referenceTo>
        <relationshipLabel>JobPositionRecruitmentRequisition_Jo_rel</relationshipLabel>
        <relationshipName>rel_1721371846236_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>